--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "backend/wsgi.py"
+            "dest": "config/wsgi.py"
         }
     ]
 
